Add comprehensive baseline CNN implementation with 90.47% test accuracy, including trained model, evaluation scripts, and documented results

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,17 @@ wheels/
 
 # Virtual environments
 .venv
+
+# System files
+xcopy
+
+# Virtual environment
+uv.lock
+.venv/
+venv/
+env/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
